--- a/.github/workflows/linux_conditional_compilation.yml
+++ b/.github/workflows/linux_conditional_compilation.yml
@@ -253,6 +253,13 @@ jobs:
             -DENABLE_CPPLINT=OFF \
             -DSELECTIVE_BUILD=ON \
             -DENABLE_LTO=OFF \
+            -DENABLE_INTEL_GPU=OFF \
+            -DENABLE_INTEL_GNA=OFF \
+            -DENABLE_OV_TF_FRONTEND=OFF \
+            -DENABLE_OV_TF_LITE=OFF \
+            -DENABLE_OV_PADDLE_FRONTEND=OFF \
+            -DENABLE_OV_PYTORCH_FRONTEND=OFF \
+            -DENABLE_OV_ONNX_FRONTEND=OFF \
             -DSELECTIVE_BUILD_STAT=${SELECTIVE_BUILD_STAT_DIR}/*.csv \
             -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CMAKE_C_COMPILER_LAUNCHER }} \
             -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CMAKE_CXX_COMPILER_LAUNCHER }} \
@@ -260,7 +267,7 @@ jobs:
             -B ${BUILD_DIR}
 
       - name: Cmake build - CC ON
-        run: cmake --build ${BUILD_DIR} --parallel --target benchmark_app
+        run: cmake --build ${BUILD_DIR} --parallel 8 --target benchmark_app
 
       - name: Show ccache stats
         run: ccache --show-stats
@@ -293,10 +300,7 @@ jobs:
           path: ${{ env.INSTALL_TEST_DIR }}
 
       - name: Extract OpenVINO packages
-        run: |
-          pushd ${INSTALL_TEST_DIR}
-            tar -xvzf openvino_tests.tar.gz -C ${INSTALL_TEST_DIR}
-          popd
+        run: tar -xvzf ${INSTALL_TEST_DIR}/openvino_tests.tar.gz -C ${INSTALL_TEST_DIR}
 
       - name: Install OpenVINO dependencies
         run: bash ${INSTALL_TEST_DIR}/scripts/install_dependencies/install_openvino_dependencies.sh -c=core -c=gpu -y
