--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -30,10 +30,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  CACHE_1_PATH: /mount/caches
-  CACHE_2_PATH: /mount/cinfsshare
-  CMAKE_CACHE_PATH: /mount/caches/ccache
-  PIP_CACHE_PATH: /mount/cinfsshare/pip/linux
+  PIP_CACHE_PATH: /mount/cache/pip/linux
   PYTHON_VERSION: '3.11'
 
 jobs:
@@ -45,8 +42,8 @@ jobs:
     container:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
       volumes:
-        - ${{ env.CACHE_1_PATH }}:${{ env.CACHE_1_PATH }}
-        - ${{ env.CACHE_2_PATH }}:${{ env.CACHE_2_PATH }}
+        - /mount/caches:/mount/caches/ccache
+        - /mount/cinfsshare:/mount/caches/pip
     env:
       DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
       CMAKE_BUILD_TYPE: 'Release'
@@ -60,7 +57,7 @@ jobs:
       INSTALL_TEST_DIR: /__w/openvino/openvino/tests_install
       BUILD_DIR: /__w/openvino/openvino/openvino_build
       OPENVINO_CONTRIB_BUILD_DIR: /__w/openvino/openvino/openvino_contrib_build
-      CCACHE_DIR: ${{ env.CMAKE_CACHE_PATH }}/ubuntu20_x86_64_Release
+      CCACHE_DIR: /mount/caches/ccache/ubuntu20_x86_64_Release
       CCACHE_TEMPDIR: /__w/openvino/openvino/ccache_temp
       CCACHE_MAXSIZE: 50G
       ONNX_RUNTIME_UTILS: /__w/openvino/openvino/openvino/.ci/azure/ci_utils/onnxruntime
