--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -527,11 +527,11 @@ jobs:
       - name: Extract OpenVINO packages
         run: |
           pushd ${{ env.INSTALL_DIR }}
-            tar -xzf openvino_package.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_package.tar.gz || exit 1
+            tar -xzf openvino_package.tar.gz -C ${{ env.INSTALL_DIR }}
           popd
 
           pushd ${{ env.INSTALL_TEST_DIR }}
-            tar -xzf openvino_tests.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_tests.tar.gz || exit 1
+            tar -xzf openvino_tests.tar.gz -C ${{ env.INSTALL_DIR }}
           popd
 
       - name: Install Python API tests dependencies
@@ -543,7 +543,15 @@ jobs:
           python3 -m pip install -r ${{ env.OPENVINO_REPO }}/tools/mo/requirements_dev.txt
 
       - name: Install OpenVINO Python wheels
-        run: python3 -m pip install openvino-dev[mxnet,caffe,kaldi,onnx,tensorflow2] --find-links=${{ env.INSTALL_DIR }}/tools
+        run: |
+          # Install the core OV wheel
+          python3 -m pip install ${{ env.INSTALL_DIR }}/tools/openvino-*.whl
+          
+          # Find and install OV dev wheel
+          pushd ${{ env.INSTALL_DIR }}/tools
+            ov_dev_wheel_name=$(find . -name 'openvino_dev*.whl')
+            python3 -m pip install $ov_dev_wheel_name[mxnet,caffe,kaldi,onnx,tensorflow2]
+          popd
 
       - name: nGraph and IE Python Bindings Tests
         if: ${{ always() }}
