--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -687,7 +687,7 @@ jobs:
         shell: cmd
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install -r ${{ github.workspace }}\install\tests\functional_test_utils\requirements.txt
+          python3 -m pip install -r ${{ github.workspace }}\install\tests\functional_test_utils\layer_tests_summary\requirements.txt
 
       - name: Restore tests execution time
         uses: actions/cache/restore@v3
