--- a/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
+++ b/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
@@ -162,13 +162,13 @@ if(ENABLE_SYSTEM_PUGIXML)
     endif()
 endif()
 
-set(_IE_nlohmann_json_FOUND "@nlohmann_json_FOUND@")
-if(_IE_nlohmann_json_FOUND)
+set(_ov_nlohmann_json_FOUND "@nlohmann_json_FOUND@")
+if(_ov_nlohmann_json_FOUND)
     find_dependency(nlohmann_json)
     set_target_properties(nlohmann_json::nlohmann_json PROPERTIES IMPORTED_GLOBAL ON)
     add_library(IE::nlohmann_json ALIAS nlohmann_json::nlohmann_json)
 endif()
-unset(_IE_nlohmann_json_FOUND)
+unset(_ov_nlohmann_json_FOUND)
 
 # inherit OpenCV from main IE project if enabled
 if("@OpenCV_FOUND@")
