--- a/src/common/conditional_compilation/CMakeLists.txt
+++ b/src/common/conditional_compilation/CMakeLists.txt
@@ -22,11 +22,9 @@ elseif(SELECTIVE_BUILD STREQUAL "ON")
     endif()
     find_host_package (Python3 REQUIRED COMPONENTS Interpreter)
 
-    set(FIXED_SELECTIVE_BUILD_STAT ${SELECTIVE_BUILD_STAT})
-    if(WIN32)
-        string(REGEX REPLACE "\\\\" "/" FIXED_SELECTIVE_BUILD_STAT "${SELECTIVE_BUILD_STAT}")
-    endif()
-    file(GLOB STAT_FILES ${FIXED_SELECTIVE_BUILD_STAT})
+    file(TO_CMAKE_PATH ${SELECTIVE_BUILD_STAT} CMAKE_SELECTIVE_BUILD_STAT)
+
+    file(GLOB STAT_FILES ${CMAKE_SELECTIVE_BUILD_STAT})
 
     if(NOT STAT_FILES)
         message(FATAL_ERROR "SELECTIVE_BUILD_STAT (${SELECTIVE_BUILD_STAT}) path doesn't contain valid csv files!")
