--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -38,7 +38,6 @@ jobs:
     env:
       CMAKE_BUILD_TYPE: 'Release'
       CMAKE_GENERATOR: 'Ninja Multi-Config'
-      CMAKE_OSX_DEPLOYMENT_TARGET: '11.0'
       MACOSX_DEPLOYMENT_TARGET: '10.12'
       CMAKE_CXX_COMPILER_LAUNCHER: ccache
       CMAKE_C_COMPILER_LAUNCHER: ccache
@@ -75,7 +74,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install python dependencies
         run: |
@@ -275,6 +274,10 @@ jobs:
           echo "DYLD_LIBRARY_PATH: ${DYLD_LIBRARY_PATH}"
           echo "DYLD_LIBRARY_PATH: ${DYLD_LIBRARY_PATH}"
           echo "DYLD_LIBRARY_PATH: ${DYLD_LIBRARY_PATH}"
+          
+          pushd ${INSTALL_DIR}/runtime/lib/intel64/Release
+            install_name_tool -id "@rpath/libopenvino.2320.dylib" libopenvino.2320.dylib
+          popd
 
           python3 -m pytest -sv ${INSTALL_TEST_DIR}/smoke_tests \
             --env_conf ${INSTALL_TEST_DIR}/smoke_tests/env_config.yml \
@@ -511,7 +514,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
@@ -582,8 +585,6 @@ jobs:
         run: |
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
           export PYTHONPATH=${{ env.LAYER_TESTS_INSTALL_DIR }}:$PYTHONPATH
-          # TODO: remove setupvars.sh from here; currently, it's used for 'test_utils' installed in '<package>/python/openvino'
-          source ${INSTALL_DIR}/setupvars.sh
 
           python3 -m pytest ${{ env.LAYER_TESTS_INSTALL_DIR }}/mo_python_api_tests/ --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-test_mo_convert.xml
         env:
